--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -468,3 +468,16 @@ hr {
 .carousel-control-prev {
   left: -4rem;
 }
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 9999999;
+  cursor: pointer;
+}
