--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -15,17 +15,16 @@
     {% include 'web/base/menu.html' with es_menu_index=True %}
 
     {% if index_configuracion.overlay_publicidad %}
-        <div id="overlay" onclick="off()">
+        <div id="overlay" onclick="offOverlayPublicidad()">
             <div class="flex-center">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-12 col-md-8 wow fadeIn">
+                        <div class="col-12 col-md-6 wow fadeIn">
                             <figure class="flex-center">
-                                {% if index_configuracion.overlay_url %}
-                                    <a href="{{ index_configuracion.overlay_url }}" target="_blank">{% endif %}
-                                <img class="img-fluid" src="{{ index_configuracion.overlay_publicidad.url }}"
-                                     alt="">
-                                {% if index_configuracion.overlay_url %}</a>{% endif %}
+                                <a href="{{ index_configuracion.overlay_url }}">
+                                    <img class="img-fluid" src="{{ index_configuracion.overlay_publicidad.url }}"
+                                         alt="">
+                                </a>
                             </figure>
                         </div>
                     </div>
@@ -71,16 +70,17 @@
     {% block final_scripts %}
         {% get_solo 'web_configurations.IndexConfiguration' as index_configuracion %}
         {% if index_configuracion.overlay_publicidad %}
-            function on() {
+            function onOverlayPublicidad() {
                 document.getElementById("overlay").style.display = "block";
             }
-
-            function off() {
+            function offOverlayPublicidad() {
                 document.getElementById("overlay").style.display = "none";
             }
-
-            window.onload = on;
         {% endif %}
+    {% endblock %}
+
+    {% block onLoadScript %}
+        onOverlayPublicidad();
     {% endblock %}
 </script>
 {% block content %}
