--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -146,6 +146,8 @@ header
 .index
   .navbar
     background-color transparent
+    .show
+      background-color $odecopack-color_1
   .navbar-toggler-icon
     cursor pointer
     color white
@@ -159,6 +161,8 @@ header
       color black
   .top-nav-collapse
     background-color white
+    .show
+      background-color white !important
     .nav-link
       color black !important
     .navbar-toggler-icon
@@ -358,9 +362,9 @@ hr
 
 .carousel-control-
   &next
-    right -4rem
+    right -2rem
   &prev
-    left -4rem
+    left -2rem
 
 #overlay
   position fixed
