--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -17,7 +17,7 @@
             {% endif %}
             <div class="col-12 col-sm-6 m-0 p-0 {% if not empresa_configuracion.video %} m-auto {% endif %}">
                 <div class="contenido">
-                    <img class="img-fluid" src="{% static 'web/img/datos-empresa2.png' %}" alt="">
+                    <img class="img-fluid" src="{% static 'web/img/datos-empresa.png' %}" alt="">
                 </div>
             </div>
             <div class="col-12 col-md-7 col-lg-8 mt-3 mt-sm-0 dark-grey-text" style="margin: auto !important;">
