Arreglo boton en responsive de categorías de soluciones

--- a/templates/web/soluciones/solucion_detail.html
+++ b/templates/web/soluciones/solucion_detail.html
@@ -38,11 +38,11 @@
                                         </ul>
                                     </nav>
 
-                                    <div class="fixed-action-btn d-md-none" style="bottom: 45px; right: 24px;">
-                                        <a class="btn-floating btn-large color-1-odecopack waves-effect waves-light">
+                                    <div class="fixed-action-btn d-md-none p-0" style="bottom: 45px; right: 24px">
+                                        <a class="btn-floating btn-large m-0 color-1-odecopack waves-effect waves-light">
                                             <i class="fa fa-search"></i>
                                         </a>
-                                        <ul class="smooth-scroll">
+                                        <ul class="smooth-scroll" style="width: 1px">
                                             {% for categoria in categoria_list %}
                                                 <li>
                                                     <a class="btn-floating btn-floating-categoria waves-effect waves-light"
