Tamaño Archivos recursos

--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -146,6 +146,9 @@
                                         <div>
                                             {{ documento.nombre }}
                                         </div>
+                                        <div>
+                                            <small>({{ documento.documento.size|filesizeformat }})</small>
+                                        </div>
                                     </a>
                                 </div>
                             {% endfor %}
