Mejora en el formulario contactenos, ahora con empresa. Arreglo en el padding de contactenos en los inputs

--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -455,6 +455,10 @@ hr {
 .formulario .texto-legal {
   font-size: 0.7rem;
 }
+.formulario input,
+.formulario textarea {
+  padding-left: 10px !important;
+}
 .clientes .controls-top .fa {
   background-color: #ed6b00;
 }
