--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -346,6 +346,9 @@ hr
 .formulario
   .texto-legal
     font-size 0.7rem
+  input,
+  textarea
+    padding-left 10px !important
 
 .clientes
   .controls-top
