--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -32,6 +32,12 @@
 
                     <div class="md-form form-sm">
                         <i class="fa fa-tag prefix"></i>
+                        <input name="empresa" type="text" id="form44" class="form-control" required>
+                        <label for="form44">Empresa</label>
+                    </div>
+
+                    <div class="md-form form-sm">
+                        <i class="fa fa-tag prefix"></i>
                         <input name="asunto" type="text" id="form21" class="form-control" required>
                         <label for="form21">Asunto</label>
                     </div>
