--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -8,6 +8,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description"
+          content="Su aliado tecnológico en líneas y procesos de producción. Somos una compania con 25 años de participacion en el mercado nacional e internacional. Involucrandonos en todas las necesidades del proceso productivo de los diferentes sectores industriales.">
+
     <title>Odecopack - {% block title %}{% endblock %}</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{% static 'web/css/font-awesome.min.css' %}">
@@ -21,7 +24,15 @@
 
     <link rel="icon" href="{% static 'web/img/favicon.ico' %}">
 
-    {% google_analytics %}
+    {% if user.is_anonymous %}
+        {% google_analytics %}
+    {% else %}
+        {% if user.is_authenticated and user.tercero %}
+            {% if user.tercero.es_cliente %}
+                {% google_analytics %}
+            {% endif %}
+        {% endif %}
+    {% endif %}
 
 </head>
 
@@ -42,7 +53,6 @@
 {% endblock %}
 
 <main>
-    {{ request.HTTP_USER_AGENT }}
     {% block content %}
 
     {% endblock %}
