SEO: Texto alterno para clientes y aliados

--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -18,7 +18,8 @@
                                     {% endif %}
 
                                 <div class="col-4 col-sm-3 flex-center">
-                                    <img src="{{ cliente.logo.url }}" class="img-fluid">
+                                    <img src="{{ cliente.logo.url }}" alt="{{ cliente.nombre }} es cliente de Odecopack"
+                                         class="img-fluid">
                                 </div>
 
                                 {% if forloop.counter|divisibleby:6 or forloop.last %}
