--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -53,6 +53,7 @@
 {% endblock %}
 
 <main>
+    <div id="fb-root"></div>
     {% block content %}
 
     {% endblock %}
@@ -73,6 +74,17 @@
 <script type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
 
 <script>
+
+    {#    (function (d, s, id) {#}
+    {#        var js, fjs = d.getElementsByTagName(s)[0];#}
+    {#        if (d.getElementById(id)) return;#}
+    {#        js = d.createElement(s);#}
+    {#        js.id = id;#}
+    {#        js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.10';#}
+    {#        fjs.parentNode.insertBefore(js, fjs);#}
+    {#    }(document, 'script', 'facebook-jssdk'));#}
+
+
     $(function () {
         $("#mdb-lightbox-ui").load("{% static 'web/mdb-addons/mdb-lightbox-ui.html' %}");
     });
