--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -52,6 +52,11 @@
                                                     </div>
                                                 </a>
                                                 <div class="caption">
+                                                    {#                                                    <div class="fb-like"#}
+                                                    {#                                                         data-href="www.google.com"#}
+                                                    {#                                                         data-layout="standard" data-action="like" data-size="small"#}
+                                                    {#                                                         data-show-faces="true" data-share="true">#}
+                                                    {#                                                    </div>#}
                                                     <h3>
                                                         {{ item.nombre }}
                                                     </h3>
