--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -380,3 +380,9 @@ hr
   bottom 0
   background-color rgba(0, 0, 0, 0.5)
   z-index 9999999
+
+.modal
+  iframe
+    width auto
+    max-width 100%
+    height auto
