--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -93,6 +93,13 @@
         $('.navbar-collapse').collapse('hide');
     });
 
+    $('.modal').on('hide.bs.modal', function (e) {
+        var $if = $(e.delegateTarget).find('iframe');
+        var src = $if.attr("src");
+        $if.attr("src", '/empty.html');
+        $if.attr("src", src);
+    });
+
 
     function init() {
         var vidDefer = document.getElementsByTagName('iframe');
