--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -5,6 +5,23 @@
 <html lang="en" class="{% block html_class %}{% endblock %}">
 
 <head>
+    <!-- Google Tag Manager -->
+    {% if not debug %}
+        <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-FPBF9LX');</script>
+        <!-- End Google Tag Manager -->
+    {% endif %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -37,6 +54,14 @@
 </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+{% if not debug %}
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-FPBF9LX"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+{% endif %}
+<!-- End Google Tag Manager (noscript) -->
 <!--Main Navigation-->
 <header>
     {% block menu %}
@@ -98,6 +123,15 @@
         var src = $if.attr("src");
         $if.attr("src", '/empty.html');
         $if.attr("src", src);
+    });
+
+    $('.modal').on('show.bs.modal', function (e) {
+        ga('send', {
+            hitType: 'event',
+            eventCategory: e.target.title,
+            eventAction: 'click',
+            eventLabel: e.target.id
+        });
     });
 
 
