--- a/templates/web/base/google_analitics.html
+++ b/templates/web/base/google_analitics.html
@@ -9,5 +9,15 @@
         ga('send', 'pageview');
     </script>
     <script async src='https://www.google-analytics.com/analytics.js'></script>
+{% else %}
+    <script>
+        window.ga = window.ga || function () {
+            (ga.q = ga.q || []).push(arguments)
+        };
+        ga.l = +new Date;
+        ga('create', 'UA-85067049-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
 {% endif %}
 <!-- End Google Analytics -->
