Rastreo a cada item de solución por eventos y adicción de google tag manager

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -96,7 +96,10 @@
     {% endblock %}
 
     {% block onLoadScript %}
-        onOverlayPublicidad();
+        {% get_solo 'web_configurations.IndexConfiguration' as index_configuracion %}
+        {% if index_configuracion.overlay_publicidad %}
+            onOverlayPublicidad();
+        {% endif %}
     {% endblock %}
 </script>
 {% block content %}
