--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -116,9 +116,9 @@
 
     $('.modal').on('hide.bs.modal', function (e) {
         var $if = $(e.delegateTarget).find('iframe');
-        var src = $if.attr("src");
-        $if.attr("src", '/empty.html');
-        $if.attr("src", src);
+        var src = $if.attr("data-src");
+        $if.attr("data-src", '/empty.html');
+        $if.attr("data-src", src);
     });
 
     $('.modal').on('show.bs.modal', function (e) {
