--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -116,9 +116,12 @@
 
     $('.modal').on('hide.bs.modal', function (e) {
         var $if = $(e.delegateTarget).find('iframe');
-        var src = $if.attr("data-src");
-        $if.attr("data-src", '/empty.html');
-        $if.attr("data-src", src);
+        var src = '';
+        for (i = 0; i < $if.length; i++) {
+            src = $if[i].src;
+            $if[i].src = '/empty.html';
+            $if[i].src = src;
+        }
     });
 
     $('.modal').on('show.bs.modal', function (e) {
