--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -25,6 +25,11 @@
                     <a class="nav-link" href="#soluciones" data-offset="150">SOLUCIONES</a>
                 </li>
             </ul>
+{#            <ul class="navbar-nav">#}
+{#                <li class="nav-item right-border">#}
+{#                    <a class="nav-link" href="{% url 'web_casos_exito:lista' %}" data-offset="150">CASOS ÉXITO</a>#}
+{#                </li>#}
+{#            </ul>#}
             <ul class="navbar-nav {% if es_menu_index == True %} smooth-scroll {% endif %}">
                 <li class="nav-item right-border">
                     <a class="nav-link" href="{% if es_menu_index == False %}{% url 'index' %}{% endif %}#clientes"
