--- a/templates/web/casos_exito/casos_exito_list.html
+++ b/templates/web/casos_exito/casos_exito_list.html
@@ -1,5 +1,5 @@
 {% extends 'web/base/base.html' %}
-{% load cache static inclusion_tags %}
+{% load cache static inclusion_tags solo_tags %}
 
 {% block title %}
     Casos de Éxito
@@ -8,7 +8,12 @@
 
 
 {% block cabezote %}
-    {% include 'web/base/cabezote.html' with titulo="Prueba de Titulo" texto="Prueba de descripción corta" imagen=solucion_objeto.header_imagen.url %}
+    {% get_solo 'web_configurations.CasosExitoConfiguration' as casos_exito_configuracion %}
+    {% if casos_exito_configuracion.header_imagen %}
+        {% include 'web/base/cabezote.html' with titulo=casos_exito_configuracion.header_titulo texto=casos_exito_configuracion.header_text imagen=casos_exito_configuracion.header_imagen.url %}
+    {% else %}
+        {% include 'web/base/cabezote.html' with titulo=casos_exito_configuracion.header_titulo texto=casos_exito_configuracion.header_text %}
+    {% endif %}
 {% endblock %}
 
 
@@ -29,14 +34,15 @@
                             tempore,
                             totam ullam veniam, veritatis.
                         </div>
-                        {% regroup casos_exito_list by industria.nombre as industria_list %}
+                        {% regroup casos_exito_list by industria as industria_list %}
 
                         <nav class="navbar navbar-soluciones navbar-expand-lg scrolling-navbar d-none d-md-block">
                             <ul class="navbar-nav navbar-nav-soluciones smooth-scroll">
                                 {% for industria in industria_list %}
                                     <li class="nav-item">
                                         <a class="color-1-odecopack nav-link-soluciones" data-offset="120"
-                                           href="#{{ industria.grouper|slugify }}">{{ industria.grouper|upper }}</a>
+                                           href="#{{ industria.grouper.nombre|slugify }}">{{ industria.grouper.nombre|upper }}
+                                        </a>
                                     </li>
                                 {% endfor %}
                             </ul>
@@ -52,10 +58,10 @@
                                     <li>
                                         <a class="btn-floating btn-floating-categoria waves-effect waves-light"
                                            data-offset="100"
-                                           href="#{{ industria.grouper|slugify }}"
+                                           href="#{{ industria.grouper.nombre|slugify }}"
                                            style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"
                                         >
-                                            {{ industria.grouper|title }}
+                                            {{ industria.grouper.nombre|title }}
                                         </a>
                                     </li>
                                 {% endfor %}
@@ -66,7 +72,15 @@
                         <div class="row">
                             {% for industria in industria_list %}
                                 <div id="{{ industria.grouper|slugify }}" class="col-12 mb-3">
-                                    <h2 class="h2-responsive mt-4 text-center text-sm-left texto-color-1-odecopack">{{ industria.grouper|upper }}</h2>
+                                    <h2 class="h2-responsive mt-4 text-center text-sm-left texto-color-1-odecopack">
+                                        {{ industria.grouper.nombre|upper }}
+                                        <i class="{{ industria.grouper.icono }}"></i>
+                                    </h2>
+                                    <div class="row lista pl-0 pl-sm-4 pr-1">
+                                        {% for item in industria.list %}
+                                            {% include 'web/casos_exito/caso_exito_item_detail.html' with item=item %}
+                                        {% endfor %}
+                                    </div>
                                 </div>
                             {% endfor %}
                         </div>
